<resources>
    <string name="app_name">Splurge</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_front_page">FrontPageActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="signup_button">Sign Up</string>
    <string name="login_button">Login</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_default">Opps! Please try again</string>
    <string name="error_network">Opps! No connection. Please check your network settings. :)</string>
    <string name="error_login">Opps! Failed to login. Check your email or password.</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="prompt_username">Username</string>
    <string name="error_signup">Opps! Failed to sign up. Please check your username, email or password.</string>
    <string name="error_invalid_username">This username is too short.</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="sign_out">Sign out</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_category">Menu Category</string>
    <string name="title_activity_plan_trip">PlanTripActivity</string>
    <string name="transition_toolbar">ToolbarTransition</string>
    <string name="up">up</string>
    <string name="transition_avatar">AvatarTransition</string>
    <string name="title_activity_record_trip">RecordTripActivity</string>
    <string name="title_activity_loan">LoanActivity</string>
    <string name="title_activity_debt">DebtActivity</string>
    <string name="title_activity_meal_bills">MealBillsActivity</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_trip">Trips</string>
    <string name="title_activity_spilt_meal">SpiltMealActivity</string>

    <string name="title_activity_profile">ProfileActivity</string>
    <string name="desc_image_view">Image</string>
    <string name="error_invalid_gst">This GST is invalid</string>
    <string name="error_invalid_svc">This Service Charge is invalid</string>
    <string name="hint_trip_location">Choose Location</string>
    <string name="prompt_title">Trip Title</string>
    <string name="prompt_youremail">Your email</string>
    <string name="prompt_feedback">Your message</string>
    <string name="hint_trip_day">Choose Day</string>
    <string name="title_activity_create_trip">Create Trip</string>
    <string name="dialog_discard">Discard changes</string>
    <string name="dialog_unsaved">Your unsaved changes will be lost.</string>
    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_select_location">Select Location</string>
    <string name="menu_action_search">Search</string>
    <string name="today">Today</string>
    <string name="dialog_pick_date">When is the trip ?</string>
    <string name="done">Done</string>

    <string name="emailUs">Contact Us</string>
    <string name="title_activity_web_view">WebViewActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_about_us">AboutUsActivity</string>

    <string name="add_expense">Add Expense</string>
    <string name="ago_now">just now</string>
    <string name="refresh">Refresh Page</string>
    <string name="toggle">Toggle Page</string>

    <plurals name="seconds_ago">
        <item quantity="one">%d second ago</item>
        <item quantity="other">%d seconds ago</item>
    </plurals>
    <plurals name="minutes_ago">
        <item quantity="one">%d minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>
    <plurals name="hours_ago">
        <item quantity="one">%d hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>
    <plurals name="days_ago">
        <item quantity="one">%d day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>
    <plurals name="weeks_ago">
        <item quantity="one">%d week ago</item>
        <item quantity="other">%d weeks ago</item>
    </plurals>
    <plurals name="years_ago">
        <item quantity="one">%d year ago</item>
        <item quantity="other">%d years ago</item>
    </plurals>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_battery">Battery</string>
    <string name="notifications">Notifications</string>
    <string name="avatar">Avatar</string>
    <string name="desc_drawer_open">Open navigation drawer</string>
    <string name="desc_drawer_close">Close navigation drawer</string>
    <string name="tutorial">Tutorial</string>


</resources>
